tests/golden/errors/shadowed_declaration.kso
fn greet name
  "hi, {name}"

fn main
  greet = 1
  print "{greet}"
